--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<div class="container-equipo">
 					<p>
 						<strong>The Cool Coders</strong> es un colectivo de adalabers que
-						surge de la transformacióndel sector digital y de la creciente
+						surge de la transformación del sector digital y de la creciente
 						demanda de más talento femenino que aporte diversidad, crecimiento
-						e innovación al campo de las nuevas tecnologías.<br />Por ello, en
+						e innovación al campo de las nuevas tecnologías. Por ello, en
 						un momento en el que se precisan muchos profesionales cualificados
 						y especializados, decidimos dar un cambio a nuestras vidas y
 						apostar por un sector en continuo crecimiento y desarrollo.
@@ -50,7 +50,7 @@
 						Somos una agencia pequeña de programadoras front-end junior que
 						cuenta con la formación y motivación suficiente para colaborar en
 						proyectos con empresas de distintos tamaños y sectores del mundo
-						de la programación y el desarrollo web.<br />Creemos que la
+						de la programación y el desarrollo web. Creemos que la
 						confianza y el trabajo en equipo es la clave para construir
 						relacione productivas y duraderas, tanto entre nosotras como con
 						los clientes. <strong>Conócenos</strong>.
