Second review EQUIPO text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						proyectos con empresas de distintos tamaños y sectores del mundo
 						de la programación y el desarrollo web. Creemos que la
 						confianza y el trabajo en equipo es la clave para construir
-						relacione productivas y duraderas, tanto entre nosotras como con
+						relaciones productivas y duraderas, tanto entre nosotras como con
 						los clientes. <strong>Conócenos</strong>.
 					</p>
 				</div>
