Add dots between icons

--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
 						</li>
 
 					</a>
-
+					&bull;
 					<a href="https://www.linkedin.com/in/sara-martin-garagorri" target="_blank">
 						<li>
 							<i style="text-decoration: none;" class="fab fa-linkedin-in"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="https://github.com/smgaragorri" target="_blank">
 						<li>
 							<i style="text-decoration: none;" class="fab fa-github-alt"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="#">
 						<li>
 							<i style="text-decoration: none;" class="fas fa-envelope"></i>
@@ -145,19 +145,19 @@
 							<i class="fab fa-twitter"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="">
 						<li>
 							<i class="fab fa-linkedin-in"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="https://github.com/includepatriciamartinez" target="_blank">
 						<li>
 							<i class="fab fa-github-alt"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="">
 						<li>
 							<i class="fas fa-envelope"></i>
@@ -186,19 +186,19 @@
 							<i class="fab fa-twitter"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="https://www.linkedin.com/in/jesica-m%C3%ADguez-rosas" target="_blank">
 						<li>
 							<i class="fab fa-linkedin-in"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="https://github.com/jemrosas" target="_blank">
 						<li>
 							<i class="fab fa-github-alt"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="#">
 						<li>
 							<i class="fas fa-envelope"></i>
@@ -229,19 +229,19 @@
 							<i class="fab fa-twitter"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="#">
 						<li>
 							<i class="fab fa-linkedin-in"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="https://github.com/Beatrizfleon" target="_blank">
 						<li>
 							<i class="fab fa-github-alt"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="#">
 						<li>
 							<i class="fas fa-envelope"></i>
@@ -272,19 +272,19 @@
 							<i class="fab fa-twitter"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="#">
 						<li>
 							<i class="fab fa-linkedin-in"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="https://github.com/ERA95/" target="_blank">
 						<li>
 							<i class="fab fa-github-alt"></i>
 						</li>
 					</a>
-
+					&bull;
 					<a href="#">
 						<li>
 							<i class="fas fa-envelope"></i>
