adalabers cards done

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 			<h1 class="container-titulo-about">QUIÉNES SOMOS</h1>
 			<div class="candidate">
 				<img class="imagen-about container-imagen-about" src=./images/Sara.jpg alt="Imagen candidata" />
-
+				
+				<div class="candidate-info-container">
 				<h3 class="candidate-info">
 					Sara Martín
 				</h3>
@@ -123,14 +124,15 @@
 					</a>
 				</ul>
 			</div>
+		</div>
 
 			<div class="candidate">
 				<img class="imagen-about" src=./images/Patricia.jpg alt="Imagen candidata" />
 
+				<div class="candidate-info-container">
 				<h3 class="candidate-info">
 					Patricia Martínez
 				</h3>
-
 				<p class="candidate-description">
 					Programadora Junior Front-End formada en el marco de la filosofía
 					Agile/Scrum por Adalab que un día decidió salir de su zona de confort
@@ -164,11 +166,14 @@
 						</li>
 					</a>
 				</ul>
-			</div>
+					</div>
+				</div>
+					
 
 			<div class="candidate">
 				<img class="imagen-about" src=./images/Jesica.jpg alt="Imagen candidata" />
 
+				<div class="candidate-info-container">
 				<h3 class="candidate-info">
 					Jesica Míguez
 				</h3>
@@ -206,11 +211,12 @@
 					</a>
 				</ul>
 			</div>
-
+			</div>
 
 			<div class="candidate">
 				<img class="imagen-about" src=./images/Bea.jpg alt="Imagen candidata" />
 
+				<div class="candidate-info-container">
 				<h3 class="candidate-info">
 					Beatriz León
 				</h3>
@@ -249,11 +255,12 @@
 					</a>
 				</ul>
 			</div>
-
+	</div>
 
 			<div class="candidate">
 				<img class="imagen-about" src=./images/Raquel.jpg alt="Imagen candidata" />
 
+				<div class="candidate-info-container">
 				<h3 class="candidate-info">
 					Raquel Ayala
 				</h3>
@@ -292,8 +299,9 @@
 					</a>
 				</ul>
 			</div>
+			</div>
+			</section>
 
-		</section>
 	</main>
 	<footer>
 		<div class="footer">
