Redo footer mobile version

--- a/index.html
+++ b/index.html
@@ -296,24 +296,25 @@
 		</section>
 	</main>
 	<footer>
+		<hr class="mark" noshade size="1px" ; />
 		<div class="footer">
-			<hr class="mark" noshade size="1px" ; />
-			<p class="copyright-footer">The Cool Coders © 2020</p>
-			<nav class="nav-footer">
-				<ul>
-					<li class="list-footer">
-						<a class="links-footer" href="#go_team">EQUIPO</a>
-					</li>
-					<li class="list-footer">
-						<a class="links-footer" href="#go_about">QUIÉNES SOMOS</a>
-					</li>
-					<li class="list-footer">
-						<a class="links-footer" href="#">CONTACTO</a>
-					</li>
-				</ul>
-			</nav>
-			<div class="image-footer"><img src="./images/logoadalab.png" alt="logo adalab" />
-			</div>
+				<p class="copyright-footer">The cool coders © 2020</p>
+				<nav class="nav-footer">
+					<ul>
+						<li>
+							<a class="links-footer" href="#go_team">Equipo</a>
+						</li>
+						<li>
+							<a class="links-footer" href="#go_about">Quiénes somos</a>
+						</li>
+						<li>
+							<a class="links-footer" href="#">Contacto</a>
+						</li>
+					</ul>
+				</nav>
+				<div class="logo-footer">
+					<a href="https://adalab.es/"><img src="./images/logoadalab.png" alt="logo adalab" /></a>
+				</div>
 		</div>
 	</footer>
 
